--- a/projeto_ml.ipynb
+++ b/projeto_ml.ipynb
@@ -4,8 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNFV64Pq+UIhR8voSqJwLW1",
+      "authorship_tag": "ABX9TyMA+8jZ5gaEc2IIYV6u0pU/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -715,6 +716,117 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/dotlincu/project-ml-classification/blob/main/projeto_ml.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Classificando o Ódio - análise de discurso de ódio em comentários do YouTube"
+      ],
+      "metadata": {
+        "id": "63v1g35vGyH-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **1. Introdução**\n",
+        "\n",
+        "## **1.1 Contexto**\n",
+        "O discurso de ódio nas redes sociais tem se tornado um problema crescente, exigindo soluções eficazes para detecção e moderação automática. O objetivo deste projeto é desenvolver um modelo de aprendizado de máquina capaz de identificar e classificar automaticamente discursos de ódio em textos.\n",
+        "\n",
+        "## **1.2 Objetivo do Projeto**\n",
+        "Criar um modelo de classificação que possa distinguir entre textos ofensivos e não ofensivos, utilizando técnicas de aprendizado de máquina e processamento de linguagem natural (NLP).\n",
+        "\n",
+        "## **1.3 Estrutura do Relatório**\n",
+        "O notebook/relatório apresenta o pipeline adotado, abordando desde a coleta e processamento dos dados até a construção e avaliação dos modelos.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "# **2. Metodologia**\n",
+        "\n",
+        "## **2.1 Pipeline do Projeto**\n",
+        "1. **Coleta de Dados:** Conjunto de dados não rotulados de comentários do YouTube.\n",
+        "2. **Pré-processamento:** Limpeza, lematização e remoção de stopwords.\n",
+        "3. **Pseudo-rotulação:** Uso de modelo pré-treinado para rotular dados com confiança acima de 90%.\n",
+        "4. **Engenharia de Features:** Representação do texto usando Bag of Words e TF-IDF.\n",
+        "5. **Definição do Baseline:** Treinamento de modelos simples (Random Forest e Logistic Regression) para referência.\n",
+        "6. **Treinamento do Modelo Final:** Fine-tuning do BERTimbau.\n",
+        "7. **Avaliação:** Uso de métricas como precisão, recall, F1-score e Kappa de Cohen.\n",
+        "\n",
+        "## **2.2 Pré-processamento e Engenharia de Features**\n",
+        "- **Remoção de URLs, números, caracteres especiais e stopwords.**\n",
+        "- **Lematização:** Uso do SpaCy para lematização em português.\n",
+        "- **Bag of Words:** Captura a quantidade de palavras no texto.\n",
+        "- **Representação TF-IDF:** Captura a importância relativa das palavras.\n",
+        "- **Word Embeddings (BERTimbau):** Representação semântica mais rica para classificação.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "# **3. Desenvolvimento**\n",
+        "\n",
+        "## **3.1 Pseudo-Rotulação**\n",
+        "- Modelo pré-treinado com F1-score de 76%.\n",
+        "- Apenas exemplos com confiança acima de 90% foram usados para treinar o modelo final.\n",
+        "- Utilização da métrica Kappa de Cohen para verificação de qualidade de rotulação.\n",
+        "\n",
+        "## **3.3 Avaliação da Qualidade da Rotulação**\n",
+        "Para avaliar a concordância entre os rótulos gerados pelo modelo pré-treinado e a anotação manual, utilizamos o coeficiente Kappa de Cohen.\n",
+        "\n",
+        "- O valor do Kappa de Cohen entre um anotador humano e o modelo pré-treinado foi **0.67**, indicando um nível de concordância moderado.\n",
+        "- A tabela a seguir apresenta a interpretação dos valores de Kappa e a porcentagem estimada de dados confiáveis:\n",
+        "\n",
+        "| Valor do Kappa  | Nível de Concordância | Porcentagem de Dados Confiáveis |\n",
+        "|----------------|----------------------|--------------------------------|\n",
+        "| 0 a 0,20      | Nenhum                | 0 a 4                          |\n",
+        "| 0,21 a 0,39   | Mínimo                | 4 a 15                         |\n",
+        "| 0,40 a 0,59   | Fraco                 | 15 a 35                        |\n",
+        "| 0,60 a 0,79   | Moderado              | 35 a 63                        |\n",
+        "| 0,80 a 0,90   | Forte                 | 64 a 81                        |\n",
+        "| Acima de 0,90 | Quase perfeito        | 82 a 100                       |\n",
+        "\n",
+        "Fonte: McHugh, M. L. (2012). Interrater reliability: The kappa statistic. Biochemia Medica, 22(3), 276–282.\n",
+        "\n",
+        "## **3.3 Construção do Modelo Baseline**\n",
+        "- **Modelos testados:**\n",
+        "  - Random Forest\n",
+        "  - Logistic Regression\n",
+        "- **Justificativa:** Modelos leves e interpretáveis para comparação inicial.\n",
+        "- **Métricas obtidas:**\n",
+        "  - Random Forest: F1-score = 0.84\n",
+        "  - Logistic Regression: F1-score = 0.85\n",
+        "\n",
+        "## **3.4 Treinamento do Modelo Final**\n",
+        "- **Modelo:** BERTimbau (modelo baseado em BERT para português).\n",
+        "- **Ajustes:** Fine-tuning nas camadas superiores.\n",
+        "- **Validação Cruzada:** K-fold para garantir maior robustez nos resultados.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "# **4. Avaliação dos Modelos**\n",
+        "\n",
+        "## **4.1 Métricas Utilizadas**\n",
+        "- **Precisão:** Mede a proporção de predições corretas.\n",
+        "- **Recall:** Mede a capacidade de detectar discursos de ódio.\n",
+        "- **F1-score:** Equilíbrio entre precisão e recall.\n",
+        "- **Kappa de Cohen:** Mede a concordância entre os rótulos preditos e manuais.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "# **5. Trabalhos Futuros**\n",
+        "\n",
+        "## **5.1 Trabalhos Futuros**\n",
+        "- Coletar dados específicos do período eleitoral, onde há uma possível maior incidência de comentários tóxicos devido ao aumento das discussões políticas polarizadas.\n",
+        "- Implementar o modelo final utilizando BERTimbau.\n",
+        "- Avaliar e comparar os modelos baseline e final.\n",
+        "- Explorar outras arquiteturas baseadas em transformers para refinamento do modelo.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Autor:** Lincoln Rebouças"
+      ],
+      "metadata": {
+        "id": "6AWiSk0CHbrV"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2408,7 +2520,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 116,
+          "height": 136,
           "referenced_widgets": [
             "a4de5cde93fd4190b5aa300a2331a9e4",
             "30b8936888d34642bf0134bcd300a485",
